--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "file:fortawesome/fortawesome-fontawesome-svg-core-1.2.36.tgz",
