--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Logs
 logs
+.idea
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+dist
 node_modules
 dist-ssr
 *.local
